crates/lang/macro/tests/ui/contract/fail/C-10-async-constructor.stderr
error: ink! constructors must not be async
  --> $DIR/C-10-async-constructor.rs:10:13
   |
10 |         pub async fn async_constructor() -> Self {
   |             ^^^^^
